fix background attachment on mobile

--- a/chens/css/custom.css
+++ b/chens/css/custom.css
@@ -32,7 +32,7 @@ nav{
 	width: 100vw;
 	height: 100vh;
 	background-image: url('../img/home-bg.jpg');
-	background-attachment: fixed;
+/*	background-attachment: fixed;*/
 	background-size: cover;
 	background-position: center bottom;
 	background-repeat: no-repeat;
